--- a/src/styles/column.css
+++ b/src/styles/column.css
@@ -26,8 +26,8 @@
 }
 
 .delete-icon {
-    font-size: 24px; /* Adjust size as needed */
-    margin-left: 8px; /* Space between title and icon */
+    font-size: 24px; 
+    margin-left: 8px; 
 }
 
 /* Column heading */
@@ -63,18 +63,18 @@
 }
 
 .icon-container {
-    display: inline-flex; /* Use inline-flex to align items horizontally */
-    align-items: center; /* Center the icon vertically */
-    justify-content: center; /* Center the icon horizontally */
-    border: 2px solid transparent; /* Add border that will become visible on hover */
-    border-radius: 4px; /* Rounded corners */
-    padding: 4px; /* Padding for better spacing */
-    cursor: pointer; /* Change cursor to pointer on hover */
+    display: inline-flex;
+    align-items: center; 
+    justify-content: center; 
+    border: 2px solid transparent; 
+    border-radius: 4px; 
+    padding: 4px; 
+    cursor: pointer; 
     transition: background-color 0.3s ease, border-color 0.3s ease; /* Smooth transition */
 }
 
 /* Hover effect */
 .icon-container:hover {
-    background-color: white; /* Change background to white on hover */
-    border-color: #172b4d; /* Change border color on hover */
+    background-color: white; 
+    border-color: #172b4d;
 }
